--- a/views/cleDev.handlebars
+++ b/views/cleDev.handlebars
@@ -40,7 +40,7 @@
                                 </li>
                                 <li>
                                     <a href="/cleDev">Cleveland Development</a>
-                                </li>                             
+                                </li>
                                 <li>
                                     <a href="/leaseComps">Lease Comparables</a>
                                 </li>
@@ -62,7 +62,7 @@
                                 </li>
                                 <li>
                                     <a href="/clemap">Cleveland Map</a>
-                                </li>                             
+                                </li>
                                 <li>
                                     <a href="/compsmap">Lease Comp Map</a>
                                 </li>
@@ -110,7 +110,6 @@
                     </div>
                 </div>
             </nav>
-           
             <!-- TABLE -->
             <div class="content">
                 <div class="container-fluid">
@@ -122,7 +121,7 @@
                                         <button type="button" class="btn btn-fill btn-info" id="button-create" data-toggle='modal' data-target='#modal--create'>Add New Site</button>
                                     </div>
                                 </div>
-                                <table id="bootstrap-table" class="table table-striped">
+                                <table id="bootstrap-table" class="table table-striped bootstrap-table">
                                     <thead>
                                         <th data-field="id" class="text-center">ID</th>
                                         <th data-field="siteName" class="text-center" data-sortable="true">Site</th>
@@ -132,14 +131,15 @@
                                         <th data-field="numUnits" data-sortable="true"># Units</th>
                                         <th data-field="salePrice" data-sortable="true">Sale Price</th>
                                         <th data-field="notes" data-sortable="true">Notes</th>
-                                   </thead>
+                                        <th data-field="actions" class="td-actions text-right" data-events="operateEvents" data-formatter="operateFormatter">Actions</th>
+                                    </thead>
                                     <tbody>
-                                        {{#each cleDev}} 
+                                        {{#each cleDev}}
                                         <tr>
                                             <td class="id">{{id}}</td>
                                             <td class="siteName">{{siteName}}</td>
                                             <td class="siteAddress">{{siteAddress}}</td>
-                                            <td class="dateEntered">{{dateEntered}}</td>
+                                            <td class="entered">{{entered}}</td>
                                             <td class="owner">{{owner}}</td>
                                             <td class="numUnits">{{numUnits}}</td>
                                             <td class="salePrice">{{salePrice}}</td>
@@ -165,100 +165,98 @@
                     </div>
                 </div>
             </div>
-        <!-- ADD CUSTOMER MODAL -->
-        <div class="modal fade" id="modal--create" tabindex="-1" role="dialog" aria-labelledby="modal--create" aria-hidden="true">
-            <div class="modal-dialog modal-lg" role="document">
-                <div class="modal-content">
-                    <div class="modal-header">
-                        <h3 class="modal-title" id="exampleModalLongTitle">Add A Site</h3>
-                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                            <span aria-hidden="true">&times;</span>
-                        </button>
-                    </div>
-                    <div class="modal-body">
+            <!-- ADD CUSTOMER MODAL -->
+            <div class="modal fade" id="modal--create" tabindex="-1" role="dialog" aria-labelledby="modal--create" aria-hidden="true">
+                <div class="modal-dialog modal-lg" role="document">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h3 class="modal-title" id="exampleModalLongTitle">Add A Site</h3>
+                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                <span aria-hidden="true">&times;</span>
+                            </button>
+                        </div>
                         <div class="modal-body">
-                            <div class="row">
-                                <div class="col-lg-12">
-                                <!-- LEFT PANEL -->
-                                    <div class="col-lg-6">
-                                        <div class="panel panel-default">
-                                            <div class="panel-body">
-                                            <form class="create-update-form" action="/api/newCleSite" method="POST">
-                                                    <div class="form-group">
-                                                        <label for="name_id">Site</label>
-                                                        <input type="text" class="form-control" id="name_id" name="siteName" placeholder="Site Name">
-                                                    </div>
-                                                    <div class="form-group">
-                                                        <!-- Street 1 -->
-                                                        <label for="street1_id" class="control-label">Street Address 1</label>
-                                                        <input type="text" class="form-control" id="street1_id" name="siteStreet1" placeholder="Street address, P.O. box, c/o">
-                                                    </div>
-                                                    <div class="form-group">
-                                                        <!-- Street 2 -->
-                                                        <label for="street2_id" class="control-label">Street Address 2 (optional) </label>
-                                                        <input type="text" class="form-control" id="street2_id" name="siteStreet2" placeholder="Apartment, suite, unit, building, floor, etc.">
-                                                    </div>
-                                                    <div class="form-group">
-                                                        <!-- City-->
-                                                        <label for="city_id" class="control-label">City</label>
-                                                        <input type="text" class="form-control" id="city_id" name="siteCity" placeholder="Cleveland">
-                                                    </div>
-                                                    <div class="form-group">
-                                                        <!-- State Button -->
-                                                        <label for="state_id" class="control-label">State</label>
-                                                        <select class="form-control" id="state_id" name="siteCity">
-                                                            <option value="OH">Ohio</option>
-                                                        </select>
-                                                    </div>
-                                                    <div class="form-group">
-                                                        <!-- Zip Code-->
-                                                        <label for="zip_id" class="control-label">Zip Code</label>
-                                                        <input type="text" class="form-control" id="zip_id" name="siteZip" placeholder="#####">
-                                                    </div>
-                                                </form>
+                            <div class="modal-body">
+                                <div class="row">
+                                    <div class="col-lg-12">
+                                        <!-- LEFT PANEL -->
+                                        <div class="col-lg-6">
+                                            <div class="panel panel-default">
+                                                <div class="panel-body">
+                                                    <form class="create-update-form" action="/api/newCleSite" method="POST">
+                                                        <input type="hidden" name="id" id="id" />
+                                                        <div class="form-group">
+                                                            <label for="siteName">Site</label>
+                                                            <input type="text" class="form-control" id="siteName" name="siteName" placeholder="Site Name">
+                                                        </div>
+                                                        <div class="form-group">
+                                                            <!-- Street 1 -->
+                                                            <label for="siteStreet" class="control-label">Street Address 1</label>
+                                                            <input type="text" class="form-control" id="siteStreet" name="siteStreet1" placeholder="Street address, P.O. box, c/o">
+                                                        </div>
+                                                        <div class="form-group">
+                                                            <!-- Street 2 -->
+                                                            <label for="siteStreet2" class="control-label">Street Address 2 (optional) </label>
+                                                            <input type="text" class="form-control" id="siteStreet2" name="siteStreet2" placeholder="Apartment, suite, unit, building, floor, etc.">
+                                                        </div>
+                                                        <div class="form-group">
+                                                            <!-- City-->
+                                                            <label for="siteCity" class="control-label">City</label>
+                                                            <input type="text" class="form-control" id="siteCity" name="siteCity" placeholder="Cleveland">
+                                                        </div>
+                                                        <div class="form-group">
+                                                            <!-- State Button -->
+                                                            <label for="siteState" class="control-label">State</label>
+                                                            <select class="form-control" id="siteState" name="siteState">
+                                                                <option value="OH">Ohio</option>
+                                                            </select>
+                                                        </div>
+                                                        <div class="form-group">
+                                                            <!-- Zip Code-->
+                                                            <label for="siteZip" class="control-label">Zip Code</label>
+                                                            <input type="text" class="form-control" id="siteZip" name="siteZip" placeholder="#####">
+                                                        </div>
+                                                </div>
                                             </div>
                                         </div>
-                                    </div>
-                                    <!-- RIGHT PANEL -->
-                                    <div class="col-lg-6">
-                                        <div class="panel panel-default">
-                                            <div class="panel-body">
-                                                <form class='modal-form'>
+                                        <!-- RIGHT PANEL -->
+                                        <div class="col-lg-6">
+                                            <div class="panel panel-default">
+                                                <div class="panel-body">
                                                     <div class="form-group">
-                                                        <label for="dateEntered_id">Date Entered</label>
-                                                        <input type="date" class="form-control" id="dateEntered_id" name="entered">
+                                                        <label for="entered">Date Entered</label>
+                                                        <input type="date" class="form-control" id="entered" name="entered">
                                                     </div>
                                                     <div class="form-group">
-                                                        <label for="owner_id">Owner</label>
-                                                        <input type="text" class="form-control" id="owner_id" name="owner">
+                                                        <label for="owner">Owner</label>
+                                                        <input type="text" class="form-control" id="owner" name="owner">
                                                     </div>
                                                     <div class="form-group">
-                                                        <label for="numUnits_id"># of Units</label>
-                                                        <input type="number" class="form-control" id="numUnits_id" name="numUnits">
+                                                        <label for="numUnits"># of Units</label>
+                                                        <input type="number" class="form-control" id="numUnits" name="numUnits">
                                                     </div>
                                                     <div class="form-group">
-                                                        <label for="salePrice_id">Sale Price</label>
-                                                        <input type="number" class="form-control" id="salePrice_id" name="salePrice">
+                                                        <label for="salePrice">Sale Price</label>
+                                                        <input type="number" class="form-control" id="salePrice" name="salePrice">
                                                     </div>
                                                     <div class="form-group">
-                                                        <label for="notes_id">Notes</label>
-                                                        <textarea class = "form-control" rows = "5" id="notes_id" name="notes"></textarea>
+                                                        <label for="notes">Notes</label>
+                                                        <textarea class="form-control" rows="5" id="notes" name="notes"></textarea>
                                                     </div>
-                                                </form>
+                                                </div>
                                             </div>
                                         </div>
                                     </div>
                                 </div>
                             </div>
-                        </div>
-                        <!-- MODAL BUTTONS - SAVE & CLOSE -->
-                        <div class="modal-footer">
-                            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                            <button class="btn btn-success btn-fill btn-wd " method="GET" action="/" type="submit " id="form--event-add">Save changes</button>
+                            <!-- MODAL BUTTONS - SAVE & CLOSE -->
+                            <div class="modal-footer">
+                                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                                <button class="btn btn-success btn-fill btn-wd " method="GET" action="/" type="submit " id="form--event-add">Save changes</button>
+                            </div>
+                            </form>
                         </div>
                     </div>
                 </div>
             </div>
-        </div>
-
 </body>
