--- a/views/fipDev.handlebars
+++ b/views/fipDev.handlebars
@@ -40,7 +40,7 @@
                                 </li>
                                 <li>
                                     <a href="/cleDev">Cleveland Development</a>
-                                </li>                             
+                                </li>
                                 <li>
                                     <a href="/leaseComps">Lease Comparables</a>
                                 </li>
@@ -62,7 +62,7 @@
                                 </li>
                                 <li>
                                     <a href="/clemap">Cleveland Map</a>
-                                </li>                             
+                                </li>
                                 <li>
                                     <a href="/compsmap">Lease Comp Map</a>
                                 </li>
@@ -110,7 +110,6 @@
                     </div>
                 </div>
             </nav>
-           
             <!-- TABLE -->
             <div class="content">
                 <div class="container-fluid">
@@ -122,7 +121,7 @@
                                         <button type="button" class="btn btn-fill btn-info" id="button-create" data-toggle='modal' data-target='#modal--create'>Add New Site</button>
                                     </div>
                                 </div>
-                                <table id="bootstrap-table" class="table table-striped">
+                                <table id="bootstrap-table" class="table table-striped bootstrap-table">
                                     <thead>
                                         <th data-field="id" class="text-left">ID</th>
                                         <th data-field="siteName" class="text-left" data-sortable="true">Site</th>
@@ -133,9 +132,9 @@
                                         <th data-field="salePrice" data-sortable="true">Sale Price</th>
                                         <th data-field="notes" data-sortable="true">Notes</th>
                                         <th data-field="actions" class="td-actions text-right" data-events="operateEvents" data-formatter="operateFormatter">Actions</th>
-                                   </thead>
+                                    </thead>
                                     <tbody>
-                                        {{#each fipDev}} 
+                                        {{#each fipDev}}
                                         <tr>
                                             <td class="id">{{id}}</td>
                                             <td class="siteName">{{siteName}}</td>
@@ -144,7 +143,7 @@
                                             <td class="owner">{{owner}}</td>
                                             <td class="numUnits">{{number numUnits}}</td>
                                             <td class="salePrice">{{number salePrice}}</td>
-                                            <td class="notes notes-Td-css" >{{notes}}</td>
+                                            <td class="notes notes-Td-css">{{notes}}</td>
                                         </tr>
                                         {{/each}}
                                     </tbody>
@@ -167,101 +166,98 @@
                 </div>
             </div>
             <!-- ADD CUSTOMER MODAL -->
-    <div class="modal fade" id="modal--create" tabindex="-1" role="dialog" aria-labelledby="modal--create" aria-hidden="true">
-        <div class="modal-dialog modal-lg" role="document">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h3 class="modal-title" id="exampleModalLongTitle">Add A Site</h3>
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                        <span aria-hidden="true">&times;</span>
-                    </button>
-                </div>
-                <div class="modal-body">
-                    <div class="modal-body">
-                        <div class="row">
-                            <div class="col-lg-12">
-                            <!-- LEFT PANEL -->
-                                <form class="create-update-form" action="/api/newfipsite" method="POST">
-                                    <div class="col-lg-6">
-                                    <div class="panel panel-default">
-                                        <div class="panel-body">
-                                            <!-- hidden tenant id if available -->
-                                            <input type="hidden" name="id" id="id" />
-                                                <div class="form-group">
-                                                    <label for="siteName">Site</label>
-                                                    <input type="text" class="form-control" id="siteName" name="siteName" placeholder="Site Name">
+            <div class="modal fade" id="modal--create" tabindex="-1" role="dialog" aria-labelledby="modal--create" aria-hidden="true">
+                <div class="modal-dialog modal-lg" role="document">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h3 class="modal-title" id="exampleModalLongTitle">Add A Site</h3>
+                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                <span aria-hidden="true">&times;</span>
+                            </button>
+                        </div>
+                        <div class="modal-body">
+                            <div class="modal-body">
+                                <div class="row">
+                                    <div class="col-lg-12">
+                                        <!-- LEFT PANEL -->
+                                        <form class="create-update-form" action="/api/newfipsite" method="POST">
+                                            <div class="col-lg-6">
+                                                <div class="panel panel-default">
+                                                    <div class="panel-body">
+                                                        <!-- hidden tenant id if available -->
+                                                        <input type="hidden" name="id" id="id" />
+                                                        <div class="form-group">
+                                                            <label for="siteName">Site</label>
+                                                            <input type="text" class="form-control" id="siteName" name="siteName" placeholder="Site Name">
+                                                        </div>
+                                                        <div class="form-group">
+                                                            <!-- Street 1 -->
+                                                            <label for="siteStreet1" class="control-label">Street Address 1</label>
+                                                            <input type="text" class="form-control" id="siteStreet1" name="siteStreet1" placeholder="Street address, P.O. box, c/o">
+                                                        </div>
+                                                        <div class="form-group">
+                                                            <!-- Street 2 -->
+                                                            <label for="siteStreet2" class="control-label">Street Address 2 (optional) </label>
+                                                            <input type="text" class="form-control" id="siteStreet2" name="siteStreet2" placeholder="Apartment, suite, unit, building, floor, etc.">
+                                                        </div>
+                                                        <div class="form-group">
+                                                            <!-- City-->
+                                                            <label for="siteCity" class="control-label">City</label>
+                                                            <input type="text" class="form-control" id="siteCity" name="siteCity" placeholder="Cleveland">
+                                                        </div>
+                                                        <div class="form-group">
+                                                            <!-- State Button -->
+                                                            <label for="siteState" class="control-label">State</label>
+                                                            <select class="form-control" id="siteState" name="siteState">
+                                                                <option value="OH">Ohio</option>
+                                                            </select>
+                                                        </div>
+                                                        <div class="form-group">
+                                                            <!-- Zip Code-->
+                                                            <label for="siteZip" class="control-label">Zip Code</label>
+                                                            <input type="text" class="form-control" id="siteZip" name="siteZip" placeholder="#####">
+                                                        </div>
+                                                    </div>
                                                 </div>
-                                                <div class="form-group">
-                                                    <!-- Street 1 -->
-                                                    <label for="siteStreet1" class="control-label">Street Address 1</label>
-                                                    <input type="text" class="form-control" id="siteStreet1" name="siteStreet1" placeholder="Street address, P.O. box, c/o">
+                                            </div>
+                                            <!-- RIGHT PANEL -->
+                                            <div class="col-lg-6">
+                                                <div class="panel panel-default">
+                                                    <div class="panel-body">
+                                                        <div class="form-group">
+                                                            <label for="entered">Date Entered</label>
+                                                            <input type="text" class="form-control datepicker" id="entered" name="entered" placeholder="Date Entered" />
+                                                        </div>
+                                                        <div class="form-group">
+                                                            <label for="owner">Owner</label>
+                                                            <input type="text" class="form-control" id="owner" name="owner">
+                                                        </div>
+                                                        <div class="form-group">
+                                                            <label for="numUnits"># of Units</label>
+                                                            <input type="number" class="form-control" id="numUnits" name="numUnits">
+                                                        </div>
+                                                        <div class="form-group">
+                                                            <label for="salePrice">Sale Price</label>
+                                                            <input type="number" class="form-control" id="salePrice" name="salePrice">
+                                                        </div>
+                                                        <div class="form-group">
+                                                            <label for="notes">Notes</label>
+                                                            <textarea class="form-control" rows="5" id="notes" name="notes"></textarea>
+                                                        </div>
+                                                    </div>
                                                 </div>
-                                                <div class="form-group">
-                                                    <!-- Street 2 -->
-                                                    <label for="siteStreet2" class="control-label">Street Address 2 (optional) </label>
-                                                    <input type="text" class="form-control" id="siteStreet2" name="siteStreet2" placeholder="Apartment, suite, unit, building, floor, etc.">
-                                                </div>
-                                                <div class="form-group">
-                                                    <!-- City-->
-                                                    <label for="siteCity" class="control-label">City</label>
-                                                    <input type="text" class="form-control" id="siteCity" name="siteCity" placeholder="Cleveland">
-                                                </div>
-                                                <div class="form-group">
-                                                    <!-- State Button -->
-                                                    <label for="siteState" class="control-label">State</label>
-                                                    <select class="form-control" id="siteState" name="siteState">
-                                                        <option value="OH">Ohio</option>
-                                                    </select>
-                                                </div>
-                                                <div class="form-group">
-                                                    <!-- Zip Code-->
-                                                    <label for="siteZip" class="control-label">Zip Code</label>
-                                                    <input type="text" class="form-control" id="siteZip" name="siteZip" placeholder="#####">
-                                                </div>
-                                        </div>
-                                    </div>
-                                    </div>
-                            
-                                <!-- RIGHT PANEL -->
-                                <div class="col-lg-6">
-                                    <div class="panel panel-default">
-                                        <div class="panel-body">
-                                                <div class="form-group">
-                                                    <label for="entered">Date Entered</label>
-                                                    <input type="text" class="form-control datepicker" id="entered" name="entered" placeholder="Date Entered" />
-                                                </div>
-                                                <div class="form-group">
-                                                    <label for="owner">Owner</label>
-                                                    <input type="text" class="form-control" id="owner" name="owner">
-                                                </div>
-                                                <div class="form-group">
-                                                    <label for="numUnits"># of Units</label>
-                                                    <input type="number" class="form-control" id="numUnits" name="numUnits">
-                                                </div>
-                                                <div class="form-group">
-                                                    <label for="salePrice">Sale Price</label>
-                                                    <input type="number" class="form-control" id="salePrice" name="salePrice">
-                                                </div>
-                                                <div class="form-group">
-                                                    <label for="notes">Notes</label>
-                                                    <textarea class = "form-control" rows = "5" id="notes" name="notes"></textarea>
-                                                </div>
-                                        </div>
+                                            </div>
                                     </div>
                                 </div>
-                            </div> 
-  
+                            </div>
+                            <!-- MODAL BUTTONS - SAVE & CLOSE -->
+                            <div class="modal-footer">
+                                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                                <button class="btn btn-success btn-fill btn-wd " method="GET" action="/" type="submit " id="form--event-add">Save changes</button>
+                            </div>
+                            </form>
                         </div>
                     </div>
-                        <!-- MODAL BUTTONS - SAVE & CLOSE -->
-                        <div class="modal-footer">
-                            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                            <button class="btn btn-success btn-fill btn-wd " method="GET" action="/" type="submit " id="form--event-add">Save changes</button>
-                        </div>
-                    </form>
                 </div>
             </div>
-        </div>
-    </div>
-
 </body>
