--- a/views/leaseComps.handlebars
+++ b/views/leaseComps.handlebars
@@ -40,7 +40,7 @@
                                 </li>
                                 <li>
                                     <a href="/cleDev">Cleveland Development</a>
-                                </li>                             
+                                </li>
                                 <li>
                                     <a href="/leaseComps">Lease Comparables</a>
                                 </li>
@@ -62,7 +62,7 @@
                                 </li>
                                 <li>
                                     <a href="/clemap">Cleveland Map</a>
-                                </li>                             
+                                </li>
                                 <li>
                                     <a href="/compsmap">Lease Comp Map</a>
                                 </li>
@@ -110,7 +110,6 @@
                     </div>
                 </div>
             </nav>
-           
             <!-- TABLE -->
             <div class="content">
                 <div class="container-fluid">
@@ -140,9 +139,9 @@
                                         <th data-field="twoBedRent" class="text-center" data-sortable="true">2-Bed Avg. Rent</th>
                                         <th data-field="threeBedRent" class="text-center" data-sortable="true">3-Bed Avg. Rent</th>
                                         <th data-field="notes" class="text-center" data-sortable="true">Notes</th>
-                                   </thead>
+                                    </thead>
                                     <tbody>
-                                        {{#each fipDev}} 
+                                        {{#each fipDev}}
                                         <tr>
                                             <td class="id">{{id}}</td>
                                             <td class="siteName">{{siteName}}</td>
@@ -195,7 +194,7 @@
                             <div class="modal-body">
                                 <div class="row">
                                     <div class="col-lg-12">
-                                    <!-- LEFT PANEL -->
+                                        <!-- LEFT PANEL -->
                                         <div class="col-lg-6">
                                             <div class="panel panel-default">
                                                 <div class="panel-body">
@@ -252,7 +251,7 @@
                                                                     <label for="dateSold_id">Date Sold</label>
                                                                     <input type="date" class="form-control" id="dateSold_id" name="dateSold">
                                                                 </div>
-                                                            </div>  
+                                                            </div>
                                                         </div>
                                                         <div class="row">
                                                             <div class="col-md-6">
@@ -266,7 +265,7 @@
                                                                     <label for="acreage_id">Total Acreage</label>
                                                                     <input type="number" class="form-control" id="acreage_id" placeholder="###.##" name="totalAcreage">
                                                                 </div>
-                                                            </div>  
+                                                            </div>
                                                         </div>
                                                         <div class="row">
                                                             <div class="col-md-6">
@@ -280,51 +279,49 @@
                                                                     <label for="numUnits_id"># of Units</label>
                                                                     <input type="number" class="form-control" id="numUnits_id" placeholder="###" name="numUnits">
                                                                 </div>
-                                                            </div>  
-                                                        </div
-                                                        <div class="row">
-                                                            <div class="col-md-4">
-                                                                <div class="form-group">
-                                                                    <label for="oneBed_id">1-Bed Rent</label>
-                                                                    <input type="number" class="form-control" id="oneBed_id" placeholder="#,###" name="oneBedRent">
-                                                                </div>
                                                             </div>
-                                                            <div class="col-md-4">
-                                                                <div class="form-group">
-                                                                    <label for="twoBed_id">2-Bed Rent</label>
-                                                                    <input type="number" class="form-control" id="twoBed_id" placeholder="#,###" name="twoBedRent">
-                                                                </div>
-                                                            </div>  
-                                                            <div class="col-md-4">
-                                                                <div class="form-group">
-                                                                    <label for="threeBed_id">3-Bed Rent</label>
-                                                                    <input type="number" class="form-control" id="threeBed_id" placeholder="#,###" name="threeBedRent">
-                                                                </div>
-                                                            </div> 
-                                                        </div>
-                                                        <div class="row">
-                                                            <div class="col-md-12">
-                                                                <div class="form-group">
-                                                                    <label for="notes_id">Notes</label>
-                                                                    <textarea class = "form-control" rows = "5" id="notes_id"></textarea>
-                                                                </div>
+                                                        </div <div class="row">
+                                                        <div class="col-md-4">
+                                                            <div class="form-group">
+                                                                <label for="oneBed_id">1-Bed Rent</label>
+                                                                <input type="number" class="form-control" id="oneBed_id" placeholder="#,###" name="oneBedRent">
                                                             </div>
                                                         </div>
-                                                    </form>
+                                                        <div class="col-md-4">
+                                                            <div class="form-group">
+                                                                <label for="twoBed_id">2-Bed Rent</label>
+                                                                <input type="number" class="form-control" id="twoBed_id" placeholder="#,###" name="twoBedRent">
+                                                            </div>
+                                                        </div>
+                                                        <div class="col-md-4">
+                                                            <div class="form-group">
+                                                                <label for="threeBed_id">3-Bed Rent</label>
+                                                                <input type="number" class="form-control" id="threeBed_id" placeholder="#,###" name="threeBedRent">
+                                                            </div>
+                                                        </div>
                                                 </div>
+                                                <div class="row">
+                                                    <div class="col-md-12">
+                                                        <div class="form-group">
+                                                            <label for="notes_id">Notes</label>
+                                                            <textarea class="form-control" rows="5" id="notes_id"></textarea>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                                </form>
                                             </div>
                                         </div>
                                     </div>
                                 </div>
                             </div>
-                            <!-- MODAL BUTTONS - SAVE & CLOSE -->
-                            <div class="modal-footer">
-                                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                                <button class="btn btn-success btn-fill btn-wd " method="GET" action="/" type="submit " id="form--event-add">Save changes</button>
-                            </div>
+                        </div>
+                        <!-- MODAL BUTTONS - SAVE & CLOSE -->
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                            <button class="btn btn-success btn-fill btn-wd " method="GET" action="/" type="submit " id="form--event-add">Save changes</button>
                         </div>
                     </div>
                 </div>
             </div>
-
+        </div>
 </body>
