--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -37,50 +37,13 @@
                 <div class="row">
                     <div class="col-md-8 col-md-offset-2">
                         <div class="header-text">
-                            <h2>LeaseUP</h2>
+                            <h2>FIP Development Mapper</h2>
                             <h4>New users register for an account</h4>
                             <hr />
                         </div>
                     </div>
-                    <div class="col-md-4 col-md-offset-2">
-                        <div class="media">
-                            <div class="media-left">
-                                <div class="icon">
-                                    <i class="pe-7s-user"></i>
-                                </div>
-                            </div>
-                            <div class="media-body">
-                                <h4>User Accounts</h4>
-                                Unique user logins with encrypted password protection
-                            </div>
-                        </div>
 
-                        <div class="media">
-                            <div class="media-left">
-                                <div class="icon">
-                                    <i class="pe-7s-graph1"></i>
-                                </div>
-                            </div>
-                            <div class="media-body">
-                                <h4>Dashboard Metrics</h4>
-                                Quickly summarize portfolio metrics into easy-to-read charts and graphs
-                            </div>
-                        </div>
-
-                        <div class="media">
-                            <div class="media-left">
-                                <div class="icon">
-                                    <i class="pe-7s-cup"></i>
-                                </div>
-                            </div>
-                            <div class="media-body">
-                                <h4>Asset Management</h4>
-                                Keep track of tenant leasing information such as rent and expiration dates
-                            </div>
-                        </div>
-
-                    </div>
-                    <div class="col-md-4 col-md-offset-s1">
+                    <div class="col-md-6 col-md-offset-3">
                         <form id="signup" name="signup" method="post" action="/signup">
                             <div class="card card-plain">
                                 <div class="content">
